/*
        Copyright 2019 devMiyax(smiyaxdev@gmail.com)

This file is part of YabaSanshiro.

        YabaSanshiro is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.

YabaSanshiro is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
along with YabaSanshiro; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
*/


plugins {
    id("com.android.application")
    id("org.jetbrains.kotlin.android")
    id("com.google.firebase.crashlytics")
    id 'org.jetbrains.kotlin.kapt'
    id("jacoco")
}

// Native libs that should never ship in release / pro APKs (debug-only
// tooling, validation layers, etc.).
ext.shippedJniLibsExcludes = ['**/libVkLayer_khronos_validation.so']

android {
    testOptions {
        unitTests.returnDefaultValues = true
    }
    namespace "org.devmiyax.yabasanshiro"
    signingConfigs {
        debug {
            storeFile file("../debug-yabara.keystore")
            storePassword "android"
            keyAlias "androiddebugkey"
            keyPassword "android"
        }

        pro {
            if( System.getenv('KEY_FILE_NAME') == null ){
                storeFile file("dmy")
            }else {
                storeFile file(System.getenv('KEY_FILE_NAME'))
            }
            storePassword System.getenv('STORE_PASSWORD')
            keyAlias System.getenv('KEY_ALIAS')
            keyPassword System.getenv('KEY_PASSWORD')
        }

        release {
            if( System.getenv('KEY_FILE_NAME') == null ){
                storeFile file("dmy")
            }else {
                storeFile file(System.getenv('KEY_FILE_NAME'))
            }
            storePassword System.getenv('STORE_PASSWORD')
            keyAlias System.getenv('KEY_ALIAS')
            keyPassword System.getenv('KEY_PASSWORD')
        }

    }

    sourceSets {
        test.java.srcDirs += 'src/test/java'
        androidTest.java.srcDirs += 'src/androidTest/java'
        androidTest.assets.srcDirs += 'src/androidTest'
    }

    testOptions {
        unitTests {
            includeAndroidResources = true
            returnDefaultValues = true
            all {
                // Fix for Robolectric with Java 17
                jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED",
                        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
                        "--add-opens=java.base/java.io=ALL-UNNAMED",
                        "--add-opens=java.base/java.util=ALL-UNNAMED"

                // Set java.library.path to include native libraries for testing
                systemProperty "java.library.path", "${projectDir}/src/main/jniLibs/arm64-v8a:${projectDir}/src/main/jniLibs/armeabi-v7a:${projectDir}/src/main/jniLibs/x86:${projectDir}/src/main/jniLibs/x86_64"

                // Force Robolectric to use older API level to avoid ComplexColor issues
                systemProperty "robolectric.enabledSdks", "28"
                systemProperty "robolectric.offline", "false"
                systemProperty "robolectric.dependency.repo.url", "https://repo1.maven.org/maven2"
                systemProperty "robolectric.dependency.repo.id", "central"

                // Prevent bytecode verification issues with Jacoco instrumentation
                jvmArgs "-Xverify:none"
            }
        }
    }

    compileSdkVersion 36

    packaging {
        resources {
            excludes += ["META-INF/LICENSE.md", "META-INF/LICENSE-notice.md"]
        }
    }

    defaultConfig {
        applicationId "org.devmiyax.yabasanshioro2"
        minSdkVersion 24
        targetSdkVersion 36
        multiDexEnabled true
        versionCode 349
        versionName '1.20.32'
        multiDexEnabled true
        vectorDrawables.useSupportLibrary = true
        signingConfig signingConfigs.pro
        buildConfigField "int", "MAX_FREE_GAMES", "3"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }

/*
        externalNativeBuild {

            // For ndk-build, instead use ndkBuild {}
            cmake {

                //cd  Passes optional arguments to CMake.
                arguments "-DANDROID_ABI=armeabi-v7a","-DANDROID_NATIVE_API_LEVEL=19","-DYAB_PORTS=android",
                        "-DYAB_WANT_C68K=FALSE","-DYAB_WANT_ARM7=TRUE","-DYAB_WANT_DYNAREC_DEVMIYAX=TRUE",
                        "-DANDROID_FORCE_ARM_BUILD=FALSE","-DCMAKE_BUILD_TYPE=Release"
            }
        }
        ndk {
            // Specifies the ABI configurations of your native
            // libraries Gradle should build and package with your APK.
            abiFilters 'armeabi-v7a'
        }
*/
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            applicationVariants.all { variant ->
                renameAPK(variant, defaultConfig, 'R')
            }
            firebaseCrashlytics {
                nativeSymbolUploadEnabled true
                unstrippedNativeLibsDir  file("$projectDir/unstripped")
            }
            ndk{
                debugSymbolLevel 'FULL'
            }
            packagingOptions {
                jniLibs {
                    excludes += project.ext.shippedJniLibsExcludes
                }
            }
            resValue "string", "app_name", "Yaba Sanshiro 2"
        }
        pro {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            applicationIdSuffix ".pro"
            versionNameSuffix '-PRO'
            buildConfigField 'String', 'AUTHORITY', '"org.devmiyax.yabasanshioro2.pro.contentprovider"'
            resValue "string", "app_name", "Yaba Sanshiro 2 Pro"
            applicationVariants.all { variant ->
                renameAPK(variant, defaultConfig, 'P')
            }
            firebaseCrashlytics {
                nativeSymbolUploadEnabled true
                unstrippedNativeLibsDir  file("$projectDir/unstripped")
            }
            ndk{
                debugSymbolLevel 'FULL'
            }
            packagingOptions {
                jniLibs {
                    excludes += project.ext.shippedJniLibsExcludes
                }
            }
        }
        debug {
            debuggable true
            testCoverageEnabled true
            applicationIdSuffix ".debug"
            versionNameSuffix '-DEBUG'
            resValue "string", "app_name", "Yaba Sanshiro 2 debug"
            buildConfigField 'String', 'AUTHORITY', '"org.devmiyax.yabasanshioro2.debug.contentprovider"'
            signingConfig signingConfigs.debug
            packagingOptions {
                doNotStrip "**/*/*.so"
            }
            firebaseCrashlytics {
                nativeSymbolUploadEnabled true
                //strippedNativeLibsDir  'src/main/jniLibs'
                //unstrippedNativeLibsDir  'src/main/jniLibs'
            }

        }
    }

    buildFeatures {
        buildConfig = true
        viewBinding = true
    }
    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    kotlinOptions {
        jvmTarget = '17'
    }
    buildToolsVersion '36.0.0'
    packagingOptions {
        jniLibs {
            useLegacyPackaging true
        }
    }
    lint {
        abortOnError false
    }

/*
    externalNativeBuild {
        cmake {
            path '../../../CMakeLists.txt'
        }
    }
*/
}

//crashlytics {
//    enableNdk true
//    androidNdkOut 'src/main/jniLibs'
//    androidNdkLibsOut 'src/main/jniLibs'
//    manifestPath 'src/main/AndroidManifest.xml'
//}

def renameAPK(variant, defaultConfig, buildType) {
    variant.outputs.all {
        def formattedDate = new Date().format('yyMMdd')
        outputFileName = "${applicationName}-V${variant.versionCode}-${variant.versionName}-${formattedDate}-${variant.name}.apk"
    }
}

allprojects {
    repositories {
        google()
        jcenter()
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    }
}

task printVersionName {
    doLast {
        println android.defaultConfig.versionName
    }
}

//repositories {
//    mavenCentral()
//    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
//    maven { url 'http://fan-adn.github.io/nendSDK-Android-lib/library' }
//    maven { url 'https://maven.fabric.io/public' }
//}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    //noinspection GradleCompatible
    implementation platform('com.google.firebase:firebase-bom:34.8.0')

    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.documentfile:documentfile:1.1.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.activity:activity-ktx:1.12.2'
    implementation 'androidx.leanback:leanback:1.2.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.tvprovider:tvprovider:1.1.0'
    implementation "androidx.window:window:1.5.1"
    implementation("androidx.viewpager2:viewpager2:1.1.0")

    // Security dependencies
    implementation "androidx.security:security-crypto:1.1.0"

    // RetroAchievements dependencies
    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2")
    implementation("com.squareup.okhttp3:okhttp:5.3.2")

    implementation 'com.google.firebase:firebase-auth:24.0.1'
    implementation 'com.google.firebase:firebase-database:22.0.1'
    implementation 'com.google.firebase:firebase-storage:22.0.1'
    implementation 'com.google.firebase:firebase-ads:23.6.0'
    implementation 'com.google.firebase:firebase-messaging:25.0.1'
    implementation 'com.google.firebase:firebase-config:23.0.1'
    implementation 'com.google.firebase:firebase-crashlytics'
    implementation 'com.google.android.gms:play-services-analytics:18.1.1'
    implementation 'com.google.android.gms:play-services-auth:21.3.0'
    implementation 'com.firebaseui:firebase-ui-auth:9.1.1'



    implementation 'com.github.bumptech.glide:glide:5.0.5'
    implementation 'commons-io:commons-io:2.21.0'
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs_nio:2.1.5'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'androidx.multidex:multidex:2.0.1'

    implementation "com.google.android.material:material:1.13.0"
    implementation 'com.google.android.play:review-ktx:2.0.2'

    implementation "androidx.preference:preference-ktx:1.2.1"

    implementation "io.noties.markwon:core:4.6.2"
    implementation 'com.google.firebase:firebase-firestore-ktx:25.1.4'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.json:json:20251224'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation "org.hamcrest:hamcrest-all:1.3"
    testImplementation "androidx.test.ext:junit-ktx:1.3.0"
    testImplementation "androidx.test:core-ktx:1.7.0"
    testImplementation "org.robolectric:robolectric:4.16"
    // MockK for unit test
    testImplementation "io.mockk:mockk:1.14.7"
    // MockK for Android instrumented test
    androidTestImplementation "io.mockk:mockk-android:1.14.7"
    testImplementation "androidx.arch.core:core-testing:2.2.0"

    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.7.0'
    androidTestImplementation 'androidx.fragment:fragment-testing:1.8.6'
    debugImplementation 'androidx.fragment:fragment-testing-manifest:1.8.6'
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2"
    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2"
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test:rules:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'



    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2"
    implementation "com.google.android.gms:play-services-games:24.0.0"
    implementation "org.apache.commons:commons-compress:1.28.0"
    implementation "org.tukaani:xz:1.11"
    implementation "com.android.billingclient:billing-ktx:8.3.0"
    implementation 'com.frybits.harmony:harmony:1.2.7'
    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.10.0"

    def room_version = "2.6.1"
    //noinspection GradleDependency
    implementation("androidx.room:room-runtime:$room_version")
    annotationProcessor("androidx.room:room-compiler:$room_version")
    kapt "androidx.room:room-compiler:$room_version"

    implementation 'jp.wasabeef:glide-transformations:4.3.0'

}

// Jacoco code coverage configuration
jacoco {
    toolVersion = "0.8.7"  // Use version compatible with Robolectric 4.15.1
}

// Configure Android test options with Jacoco compatibility
android.testOptions.unitTests.all {
    jacoco {
        includeNoLocationClasses = true
        excludes = [
            'jdk.internal.*',
            'android/**/*',
            'androidx/**/*',
            'com.android.**/*',
            'org.robolectric.**/*',
            'android/content/res/**/*',
            'android/util/**/*',
            'android/graphics/**/*',
            '**/*$WhenMappings.*',
            '**/*$Companion.*',
            '**/*Test*.*',
            '**/*Tests*.*',
            '**/R.class',
            '**/R$*.class',
            '**/BuildConfig.*',
            '**/Manifest*.*'
        ]
    }

    // Additional system properties to prevent bytecode verification issues
    systemProperty 'jacoco.dumpOnExit', 'false'
    systemProperty 'jacoco.output', 'file'
    systemProperty 'jacoco.append', 'true'
}

// Task to generate combined test coverage report
task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }

    def fileFilter = [
        '**/R.class',
        '**/R$*.class',
        '**/BuildConfig.*',
        '**/Manifest*.*',
        '**/*Test*.*',
        'android/**/*.*',
        '**/AutoValue_*.*',
        '**/*JavascriptBridge.class',
        '**/databinding/**',
        '**/android/databinding/**',
        '**/androidx/databinding/**',
        '**/BR.class',
        '**/androidx/**'
    ]

    def debugTree = fileTree(dir: "${buildDir}/intermediates/javac/debug/classes", excludes: fileFilter)
    def kotlinDebugTree = fileTree(dir: "${buildDir}/tmp/kotlin-classes/debug", excludes: fileFilter)
    def mainSrc = "${project.projectDir}/src/main/java"
    def kotlinMainSrc = "${project.projectDir}/src/main/kotlin"

    sourceDirectories.setFrom(files([mainSrc, kotlinMainSrc]))
    classDirectories.setFrom(files([debugTree, kotlinDebugTree]))
    executionData.setFrom(fileTree(dir: buildDir, includes: [
        'jacoco/testDebugUnitTest.exec',
        'outputs/unit_test_code_coverage/debugUnitTest/*.exec'
    ]))
}

// Task specifically for our auth package coverage
task authPackageCoverageReport(type: JacocoReport) {
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }

    def fileFilter = [
        '**/R.class',
        '**/R$*.class',
        '**/BuildConfig.*',
        '**/Manifest*.*',
        '**/*Test*.*',
        'android/**/*.*'
    ]

    // Focus on auth package only
    def debugTree = fileTree(
        dir: "${buildDir}/tmp/kotlin-classes/debug",
        includes: ['**/auth/**/*.class'],
        excludes: fileFilter
    )
    def authSrc = "${project.projectDir}/src/main/java/org/uoyabause/android/auth"

    sourceDirectories.setFrom(files([authSrc]))
    classDirectories.setFrom(files([debugTree]))
    executionData.setFrom(fileTree(dir: buildDir, includes: [
        'jacoco/testDebugUnitTest.exec',
        'outputs/unit_test_code_coverage/debugUnitTest/*.exec'
    ]))
}


// ADD THIS AT THE BOTTOM
apply plugin: 'com.google.gms.google-services'
apply plugin: 'kotlin-android'
